replace SObjectType by String